# Platform-Detector

./: CMakeLists.txt  README.md
include/: detector.hpp  preprocessor.hpp
source/: detector.cpp  main.cpp
